--- a/workflows/datateam_miscellaneous/cyberduck_instructions.Rmd
+++ b/workflows/datateam_miscellaneous/cyberduck_instructions.Rmd
@@ -3,7 +3,7 @@
 To use Cyberduck to transfer local files onto the Datateam server:
 
 1) Open Cyberduck.
-2) Check that you have the latest version (Cyberduck -> Check for Update...). If not, download and install the latest (you may need Jesse or Jeanette to enter a pw).
+2) Check that you have the latest version (Cyberduck -> Check for Update...). If not, download and install the latest (you may need Dom, Jesse, or Jeanette to enter a password).
 3) Click "Open Connection".
 4) From the drop-down, choose "SFTP (Secure File Transfer Protocol)".
 5) Enter "datateam.nceas.ucsb.edu" for Server.
