Made minor edits

--- a/workflows/datateam_miscellaneous/project_specific_steps.Rmd
+++ b/workflows/datateam_miscellaneous/project_specific_steps.Rmd
@@ -1,6 +1,6 @@
 ## Project-specific steps
 
-Sometimes many datasets are associated with a larger project, such as the State of Alaska Salmon and People (SASAP) project. These datasets should be given additional project-specific information using `eml@dataset@project`. This will add pre-defined information including the project title, funding sources, and key personnel. You will also want to set access permissions to the project as well. If you are working on a SASAP dataset, prior to writing the eml and publishing the dataset you will set the project with this code:
+Sometimes many data sets are associated with a larger project, such as the State of Alaska Salmon and People (SASAP) project. These data sets should be given additional project-specific information using `eml@dataset@project`. This will add pre-defined information including the project title, funding sources, and key personnel. You will also want to set access permissions to the project as well. If you are working on a SASAP data set, prior to writing the EML and publishing the data set you will set the project with this code:
 
 ```{r, eval=FALSE}
 source('~/sasap-data/data-submission/Helpers/SasapProjectCreator.R')
@@ -10,8 +10,8 @@ eml@dataset@project <- sasap_project()
 Then, update the access permissions in the system metadata using `set_rights_and_access`.
 
 ```{r, eval=FALSE}
-pkg <- get_package(mn, resource_map_pid)
-set_rights_and_access(mn, unlist(pkg), 'CN=SASAP,DC=dataone,DC=org', permissions = c('read', 'write', 'changePermission'))
+pkg <- get_package(mnT, resource_map_pid)
+set_rights_and_access(mnT, unlist(pkg), 'CN=SASAP,DC=dataone,DC=org', permissions = c('read', 'write', 'changePermission'))
 ```
 
 Finally, go through the [SASAP checklist](https://github.nceas.ucsb.edu/NCEAS/sasap-data/blob/master/data-submission/checklist.Rmd) to ensure that the package meets all of the project-specific requirements for publishing.
