--- a/workflows/edit_data_packages/create_a_resource_map.Rmd
+++ b/workflows/edit_data_packages/create_a_resource_map.Rmd
@@ -1,8 +1,8 @@
 ## Create a resource map
 
-If you are creating a new data package. You must create a `resource_map`. `Resource_maps` provide information about the resources in the data package (e.g. what data files should be included in the package, where the metadata are, etc.)
+If you are creating a new data package, you must create a resource map. Resource maps provide information about the resources in the data package (e.g. what data files should be included in the package, where the metadata are, etc.).
 
-To create a new resource map with an existing [published](#publish-an-object) `metadata_pid` and `data_pids`, use the following command.
+To create a new resource map with an existing [published](#publish-an-object) `metadata_pid` and `data_pids`, use the following command:
 
 ```{r create resource map, eval = FALSE}
 resource_map_pid <- arcticdatautils::create_resource_map(mnT,
