made minor edits

--- a/workflows/edit_data_packages/obsolescence_chain.Rmd
+++ b/workflows/edit_data_packages/obsolescence_chain.Rmd
@@ -1,20 +1,20 @@
 
 ## Obsolescence chain
 
-This chunk is to obsolete one dataset. If there are more to add to the chain, more steps can be added, carefully making sure to fill in `obsoletes` and `obsoletedBy` slots for each one. 
+This chunk is to obsolete one data set. If there are more to add to the chain, more steps can be added. Be very careful. Make sure to fill in `obsoletes` and `obsoletedBy` slots for each one. 
 
 ```{r, eval = FALSE}
-# get oldest version of the file you want to be visible. Use get_all_versions and look at the first.
+# get oldest version of the file you want to be visible. Use get_all_versions and look at the latest.
 # urn:uuid:...
 
-# PID for data set to be hidden: doi:10…
+# PID for data set to be obsoleted (hidden): doi:10…
 
-# adding data set to hide in the slot before the first version of the visible data set
+# adding data set to obsolete (hide) in the slot before the first version of the visible data set
 sysmeta1 <- getSystemMetadata(mn, "urn:uuid:...")
 sysmeta1@obsoletes <- "doi:10…"
 updateSystemMetadata(mn, "urn:uuid:...", sysmeta1)
 
-# adding first version to obsolescence chain after hidden version
+# adding first version to obsolescence chain after obsoleted (hidden) version
 sysmeta0 <- getSystemMetadata(mn, "doi:10…")
 sysmeta0@obsoletedBy <- "urn:uuid:..."
 updateSystemMetadata(mn, "doi:10…", sysmeta0)
