--- a/workflows/edit_data_packages/set_dataone_nodes.Rmd
+++ b/workflows/edit_data_packages/set_dataone_nodes.Rmd
@@ -1,8 +1,8 @@
 ## Set DataONE nodes 
-Tell R which repo you want to work with by setting the `Coordinating Node` (cn) and `Member Node` (mn) using the appropriate code below.
+Tell R which repo you want to work with by setting the coordinating node (CN) and member node (MN) using the appropriate code below.
 
 ```{block, type = "warning"}
-A note on nodes - be very careful about what you publish on production nodes (PROD, or arcticdata.io). These nodes should NEVER be used to publish test or training datasets.
+A note on nodes - be very careful about what you publish on production nodes (`PROD`, or arcticdata.io). These nodes should NEVER be used to publish test or training data sets.
 ```
 
 ### Staging (Test) nodes
@@ -27,5 +27,5 @@ cn2 <- dataone::CNode("PROD")
 mn2 <- dataone::getMNode(cn, "urn:node:KNB")
 ```
 
-[More DataONE STAGING nodes can be found here.](https://cn-stage.test.dataone.org/cn/v2/node)
-[More DataONE PROD nodes can be found here.](https://cn.dataone.org/cn/v2/node)
+More DataONE STAGING nodes can be found [here](https://cn-stage.test.dataone.org/cn/v2/node).
+More DataONE PROD nodes can be found [here](https://cn.dataone.org/cn/v2/node).
