--- a/workflows/pi_correspondence/email_templates.Rmd
+++ b/workflows/pi_correspondence/email_templates.Rmd
@@ -1,5 +1,9 @@
 ## Email Templates
 
+Please think critically when using these canned replies rather than just blindly sending them. Typically, content should be adjusted/ customized for each response to be as relevant, complete, and precise as possible.  
+
+Remeber to consult the [submission guidelines](https://arcticdata.io/submit/) for details of what is expected.  
+
 ```{r, echo = FALSE}
 chapter <- "email_templates/"
 sections <- dir(path = chapter, pattern = ".Rmd$")
