--- a/workflows/pi_correspondence/email_templates/A_initial_email_template.Rmd
+++ b/workflows/pi_correspondence/email_templates/A_initial_email_template.Rmd
@@ -1,7 +1,7 @@
 ### Initial email template
 
 > Hello _____,
-> Thank you for your recent submission to the NSF Arctic Data Center! We will review your dataset and get back to you with any suggestions.
+> Thank you for your recent submission to the NSF Arctic Data Center! We will review your data set and get back to you with any suggestions.
 > 
 > From my preliminary examination of your submission I have noticed a few items that I would like to bring to your attention. We are here to help you publish your submission, but your continued assistance is needed to do so. See comments below:
 > 
@@ -11,7 +11,7 @@
 > 
 > [YOUR NAME]
 
-#### Poor title
+#### Title
 
 Provides the *what, where, and when* of the data
 
@@ -21,54 +21,37 @@ Does not use acronyms
 
 > We noticed that your title contains several acronyms or abbreviations. In order to increase discoverability of your title, please spell out all acronyms and abbreviations.
 
-#### Poor abstract
+#### Abstract
 
 Describes DATA in package (ideally > 100 words)
 
 > Your abstract, while informative, appears to be missing some information. We suggest that the abstract be sufficiently descriptive for a general scientific audience. It should provide an overview of the scientific context/ project/ hypotheses, how this data package fits into the larger project, a synopsis of the experimental or sampling design, and a summary of the data contents. If you prefer and it is appropriate, we could add language from the abstract in the NSF Award found here: [NSF AWARD URL].
 
-#### Poor data
+#### Data
 
 At least one data file
 
 > We noticed that no data files were submitted. With the exception of sensitive social science data, NSF requires the submission of all data products prior to publication. Do you intend to submit data files?
 
-No xls/xlsx files (or other proprietary files)
+Open formats
 
 > We noticed that the data files submitted are in xlsx format. Please convert your files to a plain text/csv (or other open source format) in order to facilitate an accurate transfer of information to users and to ensure preservation of the data in perpetuity.
 
-> We noticed you submitted your data as a .mat file. While the Arctic Data Center supports the upload of any data file format, sharing data can be greatly enhanced if you use ubiquitous, easy-to-read formats. We recommend conversion of your data to txt or csv (or other open) formats for better archival.
+> We noticed you submitted your data as a .fig file. While the Arctic Data Center supports the upload of any data file format, sharing data can be greatly enhanced if you use ubiquitous, easy-to-read formats. We recommend conversion of your data to txt or csv (or other open) formats for better archival.
 
 File contents and relationships among files are clear
 
 > Could you provide a short description of the files submitted? Information about how each file was generated (what software, source files, etc.) allows other scientists to reproduce your work.
 
-All attributes are clearly defined
-
-Check for descriptions of abbreviations and units:
-
-> Could you describe ____? 
-
-> Please define “X”. 
-
-> Please define “XYZ”, including the unit of measure. 
-
-> What are the units of measurement for the columns labeled “ABC” and “XYZ”?
-
-Column names do not use spaces or special characters
-
-> Data files should include column headers without special characters or spaces (i.e., Exp_no, NO3_M, Organic_M, as per “Some Simple Guidelines for Effective Data Management” - http://onlinelibrary.wiley.com/doi/10.1890/0012-9623-90.2.205/full).
-
-NA's are defined.
+Missing value codes
 
 > What do the NA's in your measurements represent? (instrument failure, site not found, etc.)
 
 > We noticed that the data files contain blank cells. What do these represent? 
 
-#### Poor funding
+#### Funding
 
-* At least one funding number
-* If there are multiple submissions with the same funding number/creators, check about nesting
+* If there are multiple data packages with the same funding number, check about nesting
 
 > Thank you for your submission to the Arctic Data Center! Based on the NSF awards, your most recent submission and the [PACKAGE NAME] package appear to be related. Would you like your submission(s) grouped with the other data packages funded by the same award? If so, we are happy to do all this grouping for you.
 
@@ -76,30 +59,31 @@ NA's are defined.
 
 > Nesting data packages under a common “parent” is beneficial so that all packages funded by the same award can be found in one place. This way additional packages can be added to the group without altering existing ones. Once we process all the “child” data packages you upload, we can group them under the same “parent”. The parent does not need to contain any data files itself, but will be populated with metadata only.
 
-#### Poor methods
+#### Methods
 
 Submissions should:
-
 - provide instrument names
 - specify how sampling locations were chosen
 - provide citations for sampling methods that are not explained in detail
 
-> Your methods, while informative, appear to be missing some information. Enough detail should be included so that a reasonable scientist can interpret the study and data for reuse without consulting you nor any other resources. This should hold true today, or even decades or a century from now. Users need to understand how the data were collected, how to interpret the values, and potentially how to use the data in the case of specialized files. We would be happy to add more content for you. Please provide us with a more robust methods section directly in this email or point us to a document from which we can extract more methods.
+> Your methods, while informative, appear to be missing some information. Enough detail should be included so that a reasonable scientist can interpret the study and data for reuse without consulting you nor any other resources. This should hold true today, or even decades from now. Users should be able to understand how the data were collected, how to interpret the values, and potentially how to use the data in the case of specialized files. Please edit the data package to provide a more robust methods section.
 
 > NSF requires that comprehensive methods information be included directly in the metadata record. Pointers or URLs to other sites are unstable and insufficient.
 
-#### Need Attributes
+#### Attributes
 
-> I noticed that your dataset had incomplete attribute/variable information. Can you please add attribute/variable information to each of your data files by clicking on the `Describe` button located to the right of each of your files at the top of the submission page located here https://beta.arcticdata.io/catalog/#submit/[INSERT EML PID HERE]. Please see the guidance below for what attribute/variable information should contain.
+> I noticed that your data set has incomplete attribute/variable information. Can you please add attribute/variable information to each of your data files by clicking on the "Describe" button located to the right of each of your files at the top of the submission page located here https://beta.arcticdata.io/catalog/#submit/[INSERT EML PID HERE] and then click over to the "Attributes" tab. Please see the guidance below for what attribute/variable information should contain.
 
->For data sets with tabular data (e.g. CSV files), submitted metadata should contain the following components for every attribute (attributes may also be known as variables and in tabular data are arranged in either columns or rows). Note, storage of data in a long versus wide format will allow for much more succinct metadata. Also, please note that tabular data stored within structured formats such as zip, NetCDF, or ESRI spatial files should also comply with these guidelines.
+> For data sets with tabular data (e.g. CSV files), submitted metadata should contain the following components for every attribute (attributes may also be known as variables and in tabular data are arranged in either columns or rows). Note, storage of data in a long versus wide format will allow for much more succinct metadata. Also, please note that tabular data stored within structured formats such as zip, NetCDF, or ESRI spatial files should also comply with these guidelines.
 
 > - A name (often the column or row header in the file). As with file names, only letters, numbers, hyphens (“-“), and underscores (“_”) should be used in attribute names. Always avoid using spaces and specialized ASCII characters when naming attributes.
 > - A complete definition.
 > - Any missing value codes along with explanations for those codes.
 > - For all numeric data, unit information is needed.
-> - For all date-time data, a date-time format is needed (e.g. "YYYY-MM-DD").
+> - For all date-time data, a date-time format is needed (e.g. "DD-MM-YYYY").
 > - For text data, full descriptions for all patterns/codes are needed if the text is constrained to a list of patterns or codes (e.g. a phone number would be constrained to a certain pattern and abbreviations for site locations may be constrained to a list of codes).
 
-
+> Could you describe ____? 
+> Please define “XYZ”, including the unit of measure. 
+> What are the units of measurement for the columns labeled “ABC” and “XYZ”?
 
