--- a/workflows/pi_correspondence/initial_review_checklist.Rmd
+++ b/workflows/pi_correspondence/initial_review_checklist.Rmd
@@ -1,24 +1,24 @@
 ## Initial review checklist
 
-Before responding to a new submission use this checklist to review the submission. When your are ready to respond use the [initial email template](#initial-email-template) and insert comments as needed.
+Before responding to a new submission use this checklist to review the submission. When your are ready to respond use the [initial email template](https://nceas.github.io/datateam-training/reference/email-templates.html) and insert comments and modify as needed.
 
-- [Title](#title)
+- Title
     - Is descriptive of the work (provides enough information to understand the contents at a general scientific level)
     - Provides a location of the work
     - Provides a time frame of the work
-- [Abstract](#abstract)
+- Abstract
     - Describes the DATA
-- [Data](#data)
+- Data
     - At least one data file
     - No xls/xlsx files (or other proprietary files)
     - File contents and relationships among files are clear
     - All attributes are clearly defined
     - Column names do not use spaces or special characters
     - NA's are explained
-- [Funding](#funding)
+- Funding
     - At least one funding number
     - If there are multiple submissions with the same funding number/creators, check about nesting
-- [Methods](#methods)
+- Methods
     - Enough detail is provided in metadata
 - Contacts
     - At least one contact with email and ORCiD
